fixed spacing of content in author box for 1000 media query

--- a/css/_1000.scss
+++ b/css/_1000.scss
@@ -101,27 +101,31 @@ header {
 
 .authors {
 	width: 48%;
-	padding: 1.5em .5em .5em 2em;
+	padding: .5em .5em .5em .5em;
 	h2 {
 		text-align: left;
-		margin: 0 0 1em .5em;
+		margin: 0 0 .5em .5em;
+		@include font(2.5);
+		color: $go-ltblue;
 	}
 	img {
-		width: 100px;
+		width: 150px;
 		margin: 1em 0 0 1em;
 
 	}
 	.author-pic {
 		float: left;
 		text-align: center;
-		margin-bottom: .5em;
+		vertical-align: middle;
+		margin: 2em 0 .5em 0;
 	}
 	.interview {
 		@include font(1);
-		width: 65%;
+		width: 60%;
 		display: inline;
 		float: left;
-		margin-left: 1em;
+		margin: 2em 0 1em 1.2em;
+		vertical-align: middle;
 	}
 }
 
