--- a/css/_800.scss
+++ b/css/_800.scss
@@ -27,7 +27,7 @@ header {
 		border-radius: 5px;
 		padding: 5px 5px;
 		text-align: right;
-		color: $white;
+		color: $black;
 		position: absolute;
 		top: .5em;
 		right: .5em;
